# larrecodnn

./: CMakeLists.txt
larrecodnn/ImagePatternAlgs/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Keras/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Keras/Tools/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Modules/: CMakeLists.txt  RawWaveformClnSigDump_module.cc  RawWaveformDump_module.cc
larrecodnn/ImagePatternAlgs/NuSonic/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/NuSonic/Core/: CMakeLists.txt  NuSonicClient.h  NuSonicClientBase.cc  NuSonicClientBase.h  NuSonicClientTypes.h
larrecodnn/ImagePatternAlgs/NuSonic/Triton/: CMakeLists.txt  Span.h  TritonClient.cc  TritonClient.h  TritonData.cc  TritonData.h  triton_utils.cc  triton_utils.h
larrecodnn/ImagePatternAlgs/Tensorflow/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Tensorflow/PointIdAlg/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Tensorflow/TF/: CMakeLists.txt  tf_graph.cc
larrecodnn/ImagePatternAlgs/Tensorflow/Tools/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/ToolInterfaces/: IPointIdAlg.h
larrecodnn/ImagePatternAlgs/Triton/Tools/: CMakeLists.txt  PointIdAlgSonicTriton_tool.cc  PointIdAlgTriton_tool.cc  PointIdAlgTrtis_tool.cc
ups/: product_deps
